fix alignment issue

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -340,6 +340,7 @@ ul.nav
 .main-right-content--full
   width 100%
   .content-item
+    height 450px
     float left
     width 30%
     margin-right 3%
